# data-quality-tools

./: README.md  pyproject.toml  run.sh
src/dataq/: __init__.py
